# nanodrt

./: RBF.ipynb  README.md  checks.ipynb  demo_notebook.ipynb  ed_tests.ipynb  fake_data.csv  fitting_results.json  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  demo_notebook-checkpoint.ipynb  ed_tests-checkpoint.ipynb  pyproject-checkpoint.toml
data/: double_ZARC.csv  ed_data_1.csv  single_ZARC.csv
data/.ipynb_checkpoints/: ed_data_1-checkpoint.csv  single_ZARC-checkpoint.csv
drt_solver/: device.py  simulaton.py  solvers.py
drt_solver_old/: characterisation.py  devices.py  measurements.py
fitting/: optimizer.py  solvers.py
nanodrt/: 000_testing.ipynb
nanodrt/drt_solver/: drt.py  measurements.py  simulation.py  simulaton.py  solvers.py  utils.py
nanodrt/drt_solver/.ipynb_checkpoints/: simulation-checkpoint.py  simulaton-checkpoint.py  solvers-checkpoint.py
nanodrt/fitting/: fits.py  optimizer.py  regression.py  regularization.py
nanodrt/fitting/.ipynb_checkpoints/: fits-checkpoint.py  optimizer-checkpoint.py  regression-checkpoint.py  regularization-checkpoint.py
nanodrt/plotting/: plots.py
nanodrt/plotting/.ipynb_checkpoints/: plots-checkpoint.py
nanodrt2/: 000_testing.ipynb
nanodrt2/drt_solver/: drt.py  measurements.py  simulation.py  simulaton.py  solvers.py  utils.py
nanodrt2/fitting/: fits.py  optimizer.py  regression.py
nanodrt2/plotting/: plots.py
notebooks/: L_curve.ipynb  checks.ipynb
notebooks copy/: 000_basic.ipynb  001_createdata.ipynb  GCV.ipynb  L_curve.ipynb  RBF.ipynb  checks.ipynb  creating_fake_data.ipynb
