[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "nanodrt"
version = "0.0.0"
description = "A Fitting Library for EIS DRT Spectroscopy" 
authors = ["Tara Murphy <tm763@cam.ac.uk>"]  
readme = "README.md"
# license = {text = "MIT License"}

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.5.2"
numpy = "^1.21.0"
pandas = "^2.0"
jax = "^0.4.0"
jaxlib = "^0.4.0"
equinox = "0.11.3" 
jupyter = "^1.0.0"
pytest = "^8.0.0"
pytest-cov = "^3.0.0"
tabulate = "^0.8.0"
tomli-w = "^1.0.0"
quadax = "0.2.0"
jaxopt = "0.8.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
ipykernel = "^6.17.1"
black = "^22.10.0"
snakeviz = "^2.1.1"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --no-cov-on-fail"

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.coverage.run] 
omit = [
    "*/tests/*",
    ]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
